--- a/public/app/ranking/templates/ranking.html
+++ b/public/app/ranking/templates/ranking.html
@@ -5,10 +5,10 @@
                 <tr ng-repeat="rank in ranking" show-profile="rank">
                     <td class="app-element__table-rank mdl-data-table__cell--non-numeric">{{ rank.position }}</td>
                     <td class="app-element__table-user mdl-data-table__cell--non-numeric">
-                        <img class="app-element__table-user__picture" ng-src="//graph.facebook.com/{{rank.uid}}/picture">
-                        <span class="app-element__table-user-name">{{ rank.name }}</span>
+                        <img class="app-element__table-picture" ng-src="//graph.facebook.com/{{rank.uid}}/picture">
+                        <span class="app-element__table-name">{{ rank.name }}</span>
                     </td>
-                    <td class="points">{{ rank.points }}</td>
+                    <td class="app-element__table-points">{{ rank.points }}</td>
                 </tr>
             </tbody>
         </table>
