--- a/public/css/style.css
+++ b/public/css/style.css
@@ -804,7 +804,7 @@ a {
   }
 
   .app-profile__name {
-    font-style: 15px;
+    font-size: 15px;
   }
 
   .app-profile--player .app-profile__name,
