--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,6 +132,22 @@ a {
   font-size: 14px;
 }
 
+.app-footer {
+  text-align: center;
+  height: 40px;
+  line-height: 40px;
+  padding-bottom: 16px;
+}
+
+.app-footer a {
+  color: #9e9e9e;
+  margin-right: 10px;
+}
+
+.app-footer a:last-child {
+  margin-right: 0;
+}
+
 .app-navigation {
   /* ... and now make sure the content is actually LTR */
   direction: ltr;
