--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -16,7 +16,8 @@
             {{ 'offer_draw'|translate }}
         </button>
         <button show-modal="modal-resign" 
-                class="app-button app-button--phone app__button--small app-game__action-button mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect">
+                class="app-button app-button--phone app__button--small app-game__action-button mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect"
+                ng-disabled="!isStarted()">
             {{ 'resign'|translate }}
         </button>
 
