--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -73,7 +73,7 @@
             <h6 class="app-game-over__result-winner" ng-if="game.result.winner === 2">{{ 'winner'|translate }}: {{ game.black.name }}</h6>
             <button ng-click="shareResult()"
                     type="button" 
-                    class="mdl-button mdl-button--raised">
+                    class="mdl-button mdl-button--raised mdl-button--colored">
                     {{ 'share'|translate }}
             </button>
         </div>
