--- a/public/app/trophies/templates/modal-trophy.html
+++ b/public/app/trophies/templates/modal-trophy.html
@@ -10,9 +10,15 @@
             </a>
             <h3 class="app-trophy__title">{{ 'trophies.content.' + trophy + '.title' | translate }}</h3>
             <span class="app-trophy__badge app-trophy__badge--modal"
-                  ng-class="getUserClass()"> 
+                  ng-class="getUserClass(trophy)"> 
             </span>
             <p class="app-trophy__desc">{{ 'trophies.content.' + trophy + '.description' | translate }}</p>
+            <button ng-if="hasTrophy(trophy)"
+                    ng-click="shareTrophy(trophy)"
+                    type="button"
+                    class="mdl-button mdl-button--raised mdl-button--colored">
+                    {{ 'share'|translate }}
+            </button>
         </div>
     </div>
 </div>
