--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -75,7 +75,7 @@
     <div>
         <div class="app__pull-left">
             <a show-profile="player" href>
-                <img show-profile="player" class="app-profile__image" src="//graph.facebook.com/{{ player.uid }}/picture">
+                <img show-profile="player" class="app-profile__image" ng-src="{{ player.avatar }}">
             </a>
         </div>
         <div class="app-profile__name">
