--- a/public/app/ranking/templates/ranking.html
+++ b/public/app/ranking/templates/ranking.html
@@ -5,7 +5,7 @@
                 <tr ng-repeat="rank in ranking" show-profile="rank">
                     <td class="app-element__table-rank mdl-data-table__cell--non-numeric">{{ rank.position }}</td>
                     <td class="app-element__table-user mdl-data-table__cell--non-numeric">
-                        <img class="app-element__table-picture" ng-src="//graph.facebook.com/{{rank.uid}}/picture">
+                        <img class="app-element__table-picture" ng-src="{{rank.avatar}}">
                         <span class="app-element__table-name">{{ rank.name }}</span>
                     </td>
                     <td class="app-element__table-points">{{ rank.points }}</td>
