--- a/public/css/components.css
+++ b/public/css/components.css
@@ -22,11 +22,8 @@
   z-index: 1000;
   visibility: hidden;
   opacity: 0;
-  -webkit-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
-  -webkit-transition-delay: $modal-delay;
-          transition-delay: $modal-delay;
-}
+  -webkit-transition: all 0.25s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 0.25s cubic-bezier(0.23, 1, 0.32, 1);}
 .app-modal--active {
   visibility: visible;
   opacity: 1;
