--- a/public/css/style.css
+++ b/public/css/style.css
@@ -155,8 +155,8 @@ a {
 .app-logo {
   position: relative;
   display: inline-block;
-  height: 40px;
-  line-height: 40px;
+  height: 36px;
+  line-height: 36px;
   padding: 0 15px;
   background-color: #795548;
   color: #fafafa;
@@ -166,10 +166,10 @@ a {
 
 .app-logo__icon {
   position: absolute;
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   top: 7px;
-  left: 11px;
+  left: 15px;
   background-size: cover;
   background-image: url(../images/logo.svg);
 }
@@ -177,7 +177,7 @@ a {
 .app-logo__text {
   text-transform: uppercase;
   padding-left: 30px;
-  font-size: 24px;
+  font-size: 20px;
 }
 
 .app-header {
@@ -610,8 +610,8 @@ a {
   .app-mobile__title {
     display: block !important;
     position: absolute;
-    left: 60px;
-    top: 8px;
+    left: 55px;
+    top: 10px;
     transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
@@ -738,8 +738,8 @@ a {
 }
 
 .app-game__box.last-turn,
-.app-game__box.ui-droppable,
-.app-game__box.selected {
+.app-game__box.selected,
+.app-game__box.ui-droppable {
   border-style: solid;
   border-width: 3px;
   box-sizing: border-box;
@@ -747,16 +747,17 @@ a {
   -webkit-box-sizing: border-box;
 }
 
-.app-game__box.last-turn {
-  border-color: #4CAF50;
-}
 
-.app-game__box.ui-droppable {
-  border-color: #3F51B5;
+.app-game__box.last-turn {
+  border-color: #F44336;
 }
 
 .app-game__box.selected {
-  border-color: #F44336;
+  border-color: #3F51B5;
+}
+
+.app-game__box.ui-droppable {
+  border-color: #4CAF50;
 }
 
 .app-game--white .app-game__row:nth-child(odd) .app-game__box:nth-child(even),
