--- a/public/app/ranking/templates/ranking.html
+++ b/public/app/ranking/templates/ranking.html
@@ -26,12 +26,14 @@
                 <button ng-show="pages.prev"
                     ng-click="setPage(pages.prev)"
                     class="app-ranking__pagination-prev mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                    <i class="material-icons">navigate_before</i>
+                    <i class="material-icons" ng-if="user.lang !== 'ar'">navigate_before</i>
+                    <i class="material-icons" ng-if="user.lang === 'ar'">navigate_next</i>
                 </button>
                 <button ng-show="pages.next"
                         ng-click="setPage(pages.next)"
                         class="app-ranking__pagination-next mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                    <i class="material-icons">navigate_next</i>
+                    <i class="material-icons" ng-if="user.lang === 'ar'">navigate_before</i>
+                    <i class="material-icons" ng-if="user.lang !== 'ar'">navigate_next</i>
                 </button>
             </div>
         </div>
