--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -17,7 +17,7 @@
         </button>
         <button show-modal="modal-resign" 
                 class="app-button app-button--phone app__button--small app-game__action-button mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect"
-                ng-disabled="!isStarted()">
+                ng-disabled="!canResign()">
             {{ 'resign'|translate }}
         </button>
 
