--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -2,13 +2,13 @@
     <div profile-game player="player2"></div>
 </div>
 
-<div class="app-game__content app-element mdl-shadow--2dp mdl-cell mdl-cell--10-col mdl-cell--12-col-tablet" 
+<div class="app-game__content app-element mdl-shadow--2dp mdl-cell mdl-cell--12-col" 
      ng-class="{'app-game--white': orientation == 'white', 'app-game--black': orientation == 'black'}">
     <div ng-repeat="number in numbers" class="app-game__row">
         <div 
             ng-repeat="letter in letters" 
             ng-init="position = letter + number" 
-            ng-class="isLastTurn(position)" 
+            ng-class="{'last-turn': isLastTurn(position) }" 
             id="{{position}}" 
             class="app-game__box"
             data-game-box>
@@ -22,17 +22,33 @@
     </div>
 </div>
 
-<div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone">
-    <div class="app-game__notation app-element mdl-shadow--2dp">
-        <div ng-repeat="notation in player1.notation track by $index">{{ notation }}</div>
-    </div>
-    <div class="app-game__notation app-element mdl-shadow--2dp">
-        <div ng-repeat="notation in player2.notation track by $index">{{ notation }}</div>
-    </div>
-</div>
-
 <div class="app-head mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <div profile-game player="player1"></div>
+</div>
+
+<div element class="mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+    <div class="app-notations">
+        <table class="app-table app-table--notations mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>{{ 'white'|translate }}</th>
+                    <th></th>
+                    <th>{{ 'black'|translate }}</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="played in game.played">
+                    <td class="app-table--notations-index mdl-data-table__cell--non-numeric">{{ $index + 1 }}</td>
+                    <td class="app-table--notations-text app-table--notations-white mdl-data-table__cell--non-numeric">{{ played.white.notation }}</td>
+                    <td class="app-table--notations-white">{{ played.white.time }}'</td>
+                    <td ng-if="played.black.notation" class="app-table--notations-text app-table--notations-black mdl-data-table__cell--non-numeric">{{ played.black.notation }}</td>
+                    <td ng-if="played.black.time" class="app-table--notations-black">{{ played.black.time }}'</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <div id="modal-response-draw" 
@@ -43,6 +59,30 @@
     <div class="app-modal__dialog">
         <div class="app-modal__content">
             <h4 class="app-modal__title">{{ player2.name }} {{ 'offers_a_draw'|translate }} ?</h4>
+            <div class="app-modal__actions">
+                <button modal-close 
+                        type="reset" 
+                        class="mdl-button mdl-button--raised">
+                        {{ 'cancel'|translate }}
+                </button>
+                <button modal-close 
+                        ng-click="acceptDraw()"
+                        type="button" 
+                        class="mdl-button mdl-button--raised mdl-button--colored">
+                        {{ 'ok'|translate }}
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="modal-possible-draw"
+     class="app-modal app-modal__bg" 
+     role="dialog" 
+     aria-hidden="true">
+    <div class="app-modal__dialog">
+        <div class="app-modal__content">
+            <h4 class="app-modal__title">{{ 'draw'|translate }} ?</h4>
             <div class="app-modal__actions">
                 <button modal-close 
                         type="reset" 
